--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -3,19 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CDN ile SimpleLightbox CSS dosyasını dahil et -->
 
+    <!-- SimpleLightbox CSS CDN -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.css"
     />
+
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Gallery</title>
   </head>
 
   <body>
     <ul class="gallery"></ul>
-    <!-- JS dosyasını modül olarak dahil et -->
-    <script type="module" src="./js/01-gallery.js"></script>
+
+    <!-- SimpleLightbox JS CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"></script>
+
+    <!-- Galeri JS dosyanı dahil et -->
+    <script src="./js/01-gallery.js"></script>
   </body>
 </html>
