--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -18,12 +18,9 @@
     <ul class="gallery"></ul>
 
     <!-- SimpleLightbox JS CDN -->
-    <script
-      type="module"
-      src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"></script>
 
     <!-- Galeri JS dosyanı dahil et -->
-    <script src="/src/js/01-gallery.js"></script>
+    <script src="./js/01-gallery.js"></script>
   </body>
 </html>
