dosya yolu type güncelledim

--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -21,6 +21,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"></script>
 
     <!-- Galeri JS dosyanı dahil et -->
-    <script src="./js/01-gallery.js"></script>
+    <script type="module" src="./js/01-gallery.js"></script>
   </body>
 </html>
