--- a/01-gallery.html
+++ b/01-gallery.html
@@ -11,6 +11,8 @@
     />
 
     <title>Gallery</title>
+    <script type="module" crossorigin src="/goit-js-hw-09/01-gallery.js"></script>
+    <link rel="modulepreload" crossorigin href="/goit-js-hw-09/assets/modulepreload-polyfill-B5Qt9EMX.js">
     <link rel="stylesheet" crossorigin href="/goit-js-hw-09/assets/styles-D_4tAl8H.css">
   </head>
 
@@ -20,7 +22,6 @@
     <!-- SimpleLightbox JS CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"></script>
 
-    <!-- Galeri JS dosyanı dahil et -->
-    <script src="./js/01-gallery.js"></script>
+    <!-- Galeri JS dosyanı dahil et -->
   </body>
 </html>
