--- a/01-gallery.html
+++ b/01-gallery.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SimpleLightbox CSS CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.css"
+    />
 
     <title>Gallery</title>
-    <script type="module" crossorigin src="/goit-js-hw-09/01-gallery.js"></script>
-    <link rel="modulepreload" crossorigin href="/goit-js-hw-09/assets/modulepreload-polyfill-B5Qt9EMX.js">
-    <link rel="modulepreload" crossorigin href="/goit-js-hw-09/assets/vendor-CgTBfC_f.js">
-    <link rel="stylesheet" crossorigin href="/goit-js-hw-09/assets/vendor-DkczhqSJ.css">
     <link rel="stylesheet" crossorigin href="/goit-js-hw-09/assets/styles-D_4tAl8H.css">
   </head>
 
   <body>
     <ul class="gallery"></ul>
 
-    <!-- Galeri JS dosyanı dahil et -->
+    <!-- SimpleLightbox JS CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"></script>
+
+    <!-- Galeri JS dosyanı dahil et -->
+    <script src="./js/01-gallery.js"></script>
   </body>
 </html>
